<resources>
    <string name="app_name">Quiz App</string>
    <string name="number1">Question 1</string>
    <string name="question1">who won world cup 2018?</string>
    <string name="France_text">FRANCE</string>
    <string name="number2">Question 2</string>
    <string name="question2">Select  argentina football players? You can select more than 1.</string>
    <string name="number3">Question 3</string>
    <string name="question3">Which of the following term is recognised as an early form of football by FIFA?</string>
    <string name="number4">Question 4</string>
    <string name="question4">When was the first FIFA World Cup inaugurated?</string>
    <string name="number5">Question 5</string>
    <string name="question5">Which of following team do not play in stripes?</string>
    <string name="Paulo_Dybala_Text">Paulo Dybala</string>
    <string name="Messi_Text">Lionel Messi</string>
    <string name="Neymar_Text">Neymar</string>
    <string name="Luis_Suárez_Text">Luis Suárez</string>
    <string name="kemari_Text">kemari</string>
    <string name="Episkyros_Text">Episkyros</string>
    <string name="Cuju_Text">Cuju</string>
    <string name="Inuit_Text">Inuit</string>
    <string name="Year1">1930</string>
    <string name="Year2">1931</string>
    <string name="Year3">1932</string>
    <string name="Year4">1933</string>
    <string name="Newcastle_Text">Newcastle</string>
    <string name="Southampton_Text">Southampton</string>
    <string name="Tottenham_Hotspur_Text">Tottenham Hotspur</string>
    <string name="Lincoln_City_Text">Lincoln City</string>
    <string name="Submit_ButtonText">SUBMIT</string>
    <string name="Answer_Hint">Type your Answer</string>
    <string name="alert_text1a">You Answered </string>
    <string name="alert_text1b"> Questions. </string>
    <string name="alert_text2a">You scored </string>
    <string name="alert_text2b"> out of 5.</string>
    <string name="alert_text3">Do you want to take the test again?</string>
    <string name="alert_yes_button">Yes</string>
    <string name="alert_Exit_button">Exit</string>
</resources>
